syntax = "proto2";
package tdrec.protos;

import "tdrec/protos/module.proto";

message BackboneConfig {
    repeated BlockConfig blocks = 1;
    required uint32 output_dim = 3;
}

message BlockConfig {
    required string name = 1;
    repeated string feature_group_names = 2;
    oneof module {
        MLP mlp = 11;

        FM fm = 12;
        DLRM dlrm = 13;

        DIN din = 14;

        PPNet ppnet = 15;
    }
}
