syntax = "proto2";
package tdrec.protos;

message MLP {
    // hidden units for each layer
    repeated uint32 hidden_units = 1;
    // activation function
    optional string activation = 2 [default = "torch.nn.ReLU"];
    // use batch normalization
    optional bool use_bn = 3 [default = false];
}

message FM {
}
message DLRM {
}

message DIN {
    // input feature group name
    required string feature_group = 1;
    // mlp config for target attention score
    required MLP attn_mlp = 2;
}

message PPNet {
    // hidden units for each layer
    repeated uint32 hidden_units = 1;
    // activation function
    optional string activation = 2 [default = "torch.nn.ReLU"];
    // use batch normalization
    optional bool use_bn = 3 [default = false];
}

message MMoE {
    required uint32 num_expert = 1;
    required MLP expert_mlp = 2;
    optional MLP gate_mlp = 3;
}

message DBMTL {
    repeated string task_names = 1;
    repeated string relation_names = 2;
    required MLP task_mlp = 3;
    optional MMoE mmoe = 4;
}

message ESMM {
    optional MMoE mmoe = 1;
    optional MLP task_mlp = 2;
}
